[package]
name = "env_logger"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
print_logger.workspace = true
env_logger = { version = "0.11", features = ["unstable-kv"] }
